--- a/sample/src/main/res/menu/menu_bottom_bar.xml
+++ b/sample/src/main/res/menu/menu_bottom_bar.xml
@@ -1,14 +1,19 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/pizza_item"
         android:icon="@drawable/ic_action_pizza"
-        android:title="@string/pizza" />
+        android:title="@string/pizza"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/donut_item"
         android:icon="@drawable/ic_action_donut"
-        android:title="@string/donut" />
+        android:title="@string/donut"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/ice_cream_item"
         android:icon="@drawable/ic_action_lolly"
-        android:title="@string/ice_cream" />
+        android:title="@string/ice_cream"
+        app:showAsAction="ifRoom"/>
 </menu>
