--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="lager">#EFA601</color>
     <color name="ale">#9b6100</color>
     <color name="stout">#252525</color>
+
+    <color name="bottom_bar_grey">#747474</color>
+    <color name="white">#ffffff</color>
 </resources>
